# technology_stack

./: LICENSE  README.md  bashrc  vimrc
Makefile/: 1.c  Makefile  hk_log.c  hk_log.h  makefile1
bpftrace/: 1.c  1hello.bt  2single_func.bt  3read.bt  3route.bt  4func.bt  5.1route_output.bt  5.1tcp_output_filter.c  5con_trace.bt  6bind.bt  Makefile.5.1  nft.sh
c11/: README
c_ares/: CMakeLists.txt  ahost.c  ares.c  ares.h  ares_gethostbyname.c  ares_init.c  ares_process.c
c_ares/examples/: CMakeLists.txt  Makefile  ahost.c  nameser.h
curl_example/: anyauthput.c  base_get.c  chkspeed.c  cookie_im_ex.c  evhiperfifo.c  externalsocket.c  file_upload.c  htmltitle.cpp  http_custom_hdrs.c  httpput.c  resolve.c  sessioninfo.c  url_2_file.c  xmlstream.c
dpdk/: 01helloworld.c  cmd.sh
effective_c++/: 03尽可能使用const  04确定对象被使用前已被初始化  05了解c++默默编写并调用哪些函数  06若不想使用编译器自动生成的函数,就该明确拒绝  07为多态基类声明virtual析构函数  08别让异常逃离析构函数  09绝不在构造和析构过程中调用virtual函数  10令operator=返回一个reference_to*this  11在operator=中处理自我赋值  12赋值对象时勿忘其每一个成分  13以对象管理资源  14在资源管理类中小心copying行为  15在资源管理类中提供对原始资源的访问  16成对使用new和delete时要采取相同形式  17以独立语句将newed对象置入智能指针  20宁以pass-by-reference-to-const替换pass-by-value  21必须返回对象时,别妄想返回其reference  24若所有参数皆需类型转换,请为此采用no-member函数  25考虑写出一个不抛异常的swap函数  26尽可能延后变量定义式的出现时间
libevent_example/: dns-example.c  hostcheck.c  hostcheck.h  le-proxy.c  rate.c  why_use_bufferevent
lockfree/: mpsc.c
lua/: 1.lua  2.lua  3.lua
muduo_examples/1filetransfer/: 1.1download.cc  1.2download.cc  1download.cc  CMakeLists.txt
muduo_examples/2asio_chat/: CMakeLists.txt  client.cc  codec.h  server.cc
(+1381 files in other folders)
